7190310: Inlining WeakReference.get(), and hoisting $referent may lead to non-terminating loops

In C2 add software membar after load from Reference.referent field to prevent commoning of loads across safepoint since GC can change its value. In C1 always generate Reference.get() intrinsic.

Reviewed-by: roland, twisti, dholmes, johnc